# wholetest

./: .gitignore  README.md  build.gradle  settings.gradle
app/: .gitignore  build.gradle
gradle/wrapper/: gradle-wrapper.properties
group/forkengin/: CMakeLists.txt  build.sh
group/forkengin/include/: my_fork.h
group/forkengin/src/: my_fork.cpp
group/kotlin_lib/src/main/java/com/example/kotlin_lib/: AllWork.kt
group/kotlin_lib/src/main/java/com/example/kotlin_lib/test/: Chapter_1.kt
group/live/: CMakeLists.txt
group/live/include/: live.h  live_log.h
group/live/src/: live.cpp
group/monitorapp/: build.gradle
group/monitorapp/src/main/: AndroidManifest.xml
group/monitorapp/src/main/java/com/example/monitorapp/: MainActivity.java
group/monitorapp/src/main/java/com/example/monitorapp/activity/: Main1Activity.kt
group/monitorapp/src/main/java/com/example/monitorapp/download/: DownloadUtil.java
group/monitorapp/src/main/java/com/example/monitorapp/entity/: BaseRequest.java
group/monitorapp/src/main/java/com/example/monitorapp/interf/: RequestCallBack.java
group/monitorapp/src/main/java/com/example/monitorapp/util/: HttpClient.java
group/monitorapp/src/main/res/layout/: activity_main.xml  activity_main1.xml
group/monitorapp/src/main/res/values/: themes.xml
group/monitorapp/src/main/res/values-night/: themes.xml
group/pluginlib/: build.gradle
group/pluginlib/src/main/cpp/: CMakeLists.txt  pluginlib.cpp
group/pluginlib/src/main/java/com/example/pluginlib/: NativeLib.java
group/pluginproject/: build.gradle
group/pluginproject/src/main/: AndroidManifest.xml
group/pluginproject/src/main/cpp/: CMakeLists.txt
group/pluginproject/src/main/cpp/include/: fork_log.h  vdplive.h
group/pluginproject/src/main/cpp/src/: duer.cpp
group/pluginproject/src/main/java/com/example/pluginproject/: MainActivity.java
group/pluginproject/src/main/java/com/example/pluginproject/application/: MyApplication.java
group/pluginproject/src/main/java/com/example/pluginproject/broadcast/: MyBroadReceiver.java
group/pluginproject/src/main/java/com/example/pluginproject/download/: DownloadUtil.java
group/pluginproject/src/main/java/com/example/pluginproject/duer/: NativeStarter.java
group/pluginproject/src/main/java/com/example/pluginproject/entity/: BaseRequest.java
group/pluginproject/src/main/java/com/example/pluginproject/interf/: RequestCallBack.java
group/pluginproject/src/main/java/com/example/pluginproject/provider/: DownloadFileProvider.java
group/pluginproject/src/main/java/com/example/pluginproject/server/: HttpService.java
group/pluginproject/src/main/java/com/example/pluginproject/util/: Constans.java  ContextUtils.java  DeviceInfoUtil.java  FileUtils.java  HttpClient.java  ProcessUtil.java  TrafficStatsHelper.java
group/pluginproject/src/main/res/layout/: activity_main.xml
group/pluginproject/src/main/res/values/: strings.xml
keystore/: good.jks
